# clx

./: README.md  pyproject.toml
clx/: __init__.py  query.py  settings.py  utils.py
clx/app/: agent.py  apps.py  models.py  prompts.py  search.py  tools.py  urls.py  views.py
clx/app/migrations/: 0001_initial.py  0002_label_project_active_label_and_more.py  0003_label_instructions_thread_message.py  0004_project_instructions_project_manual_instructions_and_more.py  0005_remove_labeltrainsetexample_reason_and_more.py  0005_remove_project_manual_instructions.py  0006_remove_labeltrainsetexample_decision_and_more.py  0006_thread_state.py  0007_labeldocument.py  0007_remove_label_inference_model_and_more.py  0008_alter_label_trainset_num_decision_neighbors_and_more.py  0008_alter_thread_model.py  0009_alter_labelquerystring_num_examples_and_more.py  0009_classificationannotation.py  0010_labeldecision_added_to_sample_and_more.py  0010_thread_total_cost_thread_total_tokens.py  0011_remove_thread_total_tokens.py  0012_message_is_compact.py  0013_prompt.py  0014_prompt_built_in.py  0015_task.py  0016_label_autopilot_thread.py  0017_project_autopilot_enabled.py  0018_thread_autopilot_locked_alter_task_status.py  0019_message_hidden.py  0020_label_finetune_id_label_finetune_status_and_more.py  0021_label_predicted_at_labeldocument_prediction_and_more.py  0022_label_prediction_stats.py
clx/app/templates/: base.html  project_detail.html  projects.html
clx/app/templates/search/: heuristics_tab.html  index.html  predictor_tab.html  search_panel.html
clx/cli/: README.md  __init__.py  autopilot.py  cleanup.py  train_multi_label.py
clx/llm/: agent.py  anno_agent.py
clx/ml/: remote_pipeline.py
experiments/: README.md
experiments/docket-data/: import_data.py
experiments/docketbert/: README.md  README.template.md  generate_readme.py  inference_test.py  prepare_train_data.py  pull_runpod_logs.py  train.py
experiments/entry-citation/: agent_examples.py  generate_data.py  predict.py  span_annotator.py  train.py  utils.py
home/projects/docketbert/runs/docketbert-final-large-395M/: config.json
home/projects/docketbert/runs/docketbert-final-large-395M/checkpoints/: results.json
home/projects/docketbert/runs/docketbert-final-large-395M/checkpoints/logs/: events.out.tfevents.1768913464.c3c16d89609e.1542.0  events.out.tfevents.1769091611.90d7d00a7e03.1540.0
home/projects/docketbert/runs/docketbert-final-sliced-175M/: config.json
projects/docket_data/: run.py
(+2 files in other folders)
